# LED-Cubes

./: .gitignore  .gitmodules  README.md  TLC5940_IREF.xlsx
5x5_LED_Cube/: 5x5_LED_Cube_Driver.sch  My_Library.lib
5x5_LED_Cube/kicad/: 5x5_LED_Cube_Driver.kicad_pcb
5x5_LED_Cube/rpi/: rpi_led_cube.dwf3work
5x5_LED_Cube/rpi/RPiPicoDriver/: CMakeLists.txt  hterm_rpi_pico.cfg  upload.sh
5x5_LED_Cube/rpi/rpi-led-cube/: CMakeLists.txt  TLC5940.cpp  TLC5940.h  main.cpp
5x5_LED_Cube/rpi/rpi-zero-led-cube/: CMakeLists.txt  LedCube5x5.cpp
5x5_LED_Cube/rpi/rpi_pico_driver/: CMakeLists.txt  RPiPicoDriver.cpp  TLC5940.cpp  W25Q64.cpp  W25Q64.h  config.h  main.cpp  sd_config.cpp  tlc5940.cpp  tlc5940.h  w25q64.cpp  w25q64.h
5x5_LED_Cube/rpi/rpi_pico_driver/src/: main.cpp
5x5_LED_Cube/rpi_pico_driver/: config.h
5x5_LED_Cube/rpi_pico_driver/include/: ledcube.h  tlc5940.h
5x5_LED_Cube/rpi_pico_driver/src/: CMakeLists.txt  ledcube.cpp  main.cpp  tlc5940.cpp
5x5_LED_Cube/rpi_zero_driver/: TLC5940.cpp
LED_Matrix_Jigs/: LED_Matrix_Assembly_Jigs.FCStd  LED_Matrix_Assembly_Jigs.FCStd1  LED_Matrix_Full_Assembly_Jig_Part_1_of_4.stl  LED_Matrix_Full_Assembly_Jig_Part_2_of_3.stl  LED_Matrix_Full_Assembly_Jig_Part_3_of_4.stl  LED_Matrix_Full_Assembly_Jig_Part_4_of_4.stl  LED_Matrix_Row_Assembly_Jig.stl
arduino-uno/5x5_LED_Cube/: 5x5_LED_Cube_Controller.kicad_pcb  5x5_LED_Cube_Controller.pro  5x5_LED_Cube_Controller.sch  5x5_LED_Cube_Controller.sch-bak  5x5_LED_Cube_Driver.kicad_pcb  5x5_LED_Cube_Driver.pro  5x5_LED_Cube_Driver.sch  5x5_LED_Cube_Matrix.sch  5x5_LED_Cube_Matrix.sch-bak  My_Library.dcm  My_Library.lib  sym-lib-table
arduino-uno/5x5_LED_Cube/5x5_LED_Cube_Test/: 5x5_LED_Cube_Test.ino
doc/: file_specification.ods
doc/file_specification/: cube_file.ksy  file.ksy  file_specification.ods
doc/file_specification/objects/: animation.ksy  frame.ksy  library.ksy  primary_header.ksy
doc/file_specification/objects/animation/: animation_v1.ksy
ledcube/: build_builders.py  build_parsers.sh  build_serializers.py  parser_patch.sh  pyproject.toml
ledcube/ledcube/: __init__.py  assemblers.py  builder.py  serializer.py
ledcube/ledcube/parser/: animation.py  animation_v1.py  cube_file.py  frame.py  library.py  library_v1.py  parser.py
ledcube/tests/: test_assemblers.py  test_builder.py  test_ledcube.py  test_parsers.py  test_serializers.py
program/rpi_pico_driver/: CMakeLists.txt  build_file_parsers.sh  config.h  rpi_led_cube.dwf3work
program/rpi_pico_driver/include/: ledcube.h  sdcard.h  tlc5940.h
program/rpi_pico_driver/include/hardware/: tlc5940.h
program/rpi_pico_driver/include/parser/: animation.h  file.h  frame.h  library.h  parserbase.h  primaryheader.h  test.h
program/rpi_pico_driver/openocd_targets/: rp2040_pi_debug_probe.cfg  rp2040_picoprobe.cfg
program/rpi_pico_driver/src/: CMakeLists.txt  ledcube.cpp  main.cpp  sd_config.cpp  sdcard.cpp  tlc5940.cpp
program/rpi_pico_driver/src/hardware/: CMakeLists.txt  sdcard.cpp  tlc5940.cpp
program/rpi_pico_driver/src/parser/: CMakeLists.txt  animation.cpp  file.cpp  frame.cpp  library.cpp  parserbase.cpp  primaryheader.cpp  test.cpp
program/rpi_pico_driver/src/parsers/: CMakeLists.txt  animation.cpp  animation.h  animation_v1.cpp  animation_v1.h  cube_file.cpp  cube_file.h  frame.cpp  frame.h  frame_v1.cpp  frame_v1.h  library.cpp  library.h  library_v1.cpp  library_v1.h  parser.cpp  parser.h  primary_header.cpp  primary_header.h
program/rpi_zero_driver/: LedCube5x5.h  main.cpp
schematic/5x5_LED_Cube/: 5x5_LED_Cube_Driver.kicad_pcb  5x5_LED_Cube_Driver.kicad_prl  5x5_LED_Cube_Driver.kicad_pro  5x5_LED_Cube_Driver.kicad_sch  5x5_LED_Cube_Driver.sch  5x5_LED_Cube_Matrix.kicad_sch  My_Library.dcm  fp-lib-table  sym-lib-table
schematic/5x5_LED_Cube/jigs/: LED_Matrix_Full_Assembly_Jig_Part_2_of_4.stl  LED_Matrix_Vertical_Slice_Assembly_Jig.stl
schematic/LED_Matrix_Jigs/: LED_Matrix_Assembly_Jigs.FCStd1
