[tool.poetry]
name = "ledcube"
version = "0.1.0"
description = "Parsers for my LED cube file format"
authors = ["crash8229 <mu304007@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/crash8229/LED-Cubes"

[tool.poetry.dependencies]
python = "^3.10"
kaitaistruct = "^0.9"
PyYAML = "^6.0"
construct = "^2.10.68"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
mypy = "^0.950"
types-PyYAML = "^6.0.7"
types-pkg-resources = "^0.1.3"
pytest_check = "^1.0.5"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
